# uni_usd_io

./: .gitignore  CMakeLists.txt  main.cc
cmake/: FindBoost.cmake  FindTBB.cmake  FindUSD.cmake
cmake/defaults/: CXXDefaults.cmake  CXXHelpers.cmake  ProjectDefaults.cmake  msvcdefaults.cmake
cmake/modules/: FindBoost.cmake  FindGLM.cmake  FindGLTF.cmake  FindJSON.cmake  FindTBB.cmake  FindUSD.cmake
data/: HelloUSD.usda
script/: build.sh  version.sh
src/: uni_asset.h  uni_prerequisites.h  uni_reader_geom.h  uni_reader_mesh.cc  uni_reader_mesh.h  uni_reader_prim.cc  uni_reader_prim.h  uni_reader_stage.cc  uni_reader_stage.h  uni_reader_xform.cc  uni_reader_xform.h  uni_scene_description.cc  uni_scene_description.h  uni_settings.cc  uni_settings.h
src/gltf/: uni_gltf.cc  uni_gltf.h
src/utils/: uni_math_matrix.cc  uni_math_matrix.h
